hackathon/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  labels:
    app: cache-service
spec:
  ports:
    - port: 81
      targetPort: 81
  selector:
    app: cache-service
